# autoforge

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: config-models.md  driver-modules.md  eval-modules.md  yaml-configs.md
.claude/skills/agents-panels/: SKILL.md
.claude/skills/create-agent/: SKILL.md
.claude/skills/create-panel/: SKILL.md
.claude/skills/driver/: SKILL.md
.claude/skills/evaluation/: SKILL.md
.claude/skills/objective-optimization/: SKILL.md
.claude/skills/programs/: SKILL.md
.claude/skills/project-setup/: SKILL.md
src/autoforge/: __init__.py  __main__.py  cli.py  config.py  engine.py  git_ops.py  skills.py  state.py
src/autoforge/driver/: driver.py  prompt_builder.py
src/autoforge/eval/: agent_runner.py  objective.py  panel.py  scoring.py
src/autoforge/ui/: console.py  progress.py
tests/: conftest.py  test_cli.py  test_config.py  test_diff_history.py  test_git_ops.py  test_objective.py  test_prompt_builder.py  test_scoring.py  test_skills.py  test_state.py
